--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url(//db.onlinewebfonts.com/c/23c0fcab84d99da0de762de7e220a6e1?family=Europa);
+html,
 body {
   margin: 0;
   font-family: "Europa", "Comic Sans MS", -apple-system, BlinkMacSystemFont,
